--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
         <li><a class="about.html">About Us</a>
         <div class="sub-menu-1">
           <ul>
-            <li><a class="Our work.html">Our Work</a></li>
-            <li><a class="contact us.html">Contact Us</a></li>
-            <li><a class="Certificates.html">Certificates</a></li>
+            <li><a href="Our work.html">Our Work</a></li>
+            <li><a href="contact us.html">Contact Us</a></li>
+            <li><a href="Certificates.html">Certificates</a></li>
           </ul>
         </div>
         </li>
-        <li><a class="Donate.html">Donate</a></li>
-        <li><a class="Blog.html">Blog</a></li>
-        <li><a class="Programmes.html">Programmes</a></li>
+        <li><a href="Donate.html">Donate</a></li>
+        <li><a href="Blog.html">Blog</a></li>
+        <li><a href="Programmes.html">Programmes</a></li>
       </ul>
       </nav>
   </header>
@@ -53,14 +53,27 @@
   });
 </script>
 
-
+<section class="hero-image">
+  <img 
+    src="images/WhatsApp Image 2025-12-07 at 20.27.59.jpeg"
+    alt="Water Jetting Solutions"
+    class="hero-bg"
+  >
+  <div class="hero-overlay">
+    <h1>Sisterhood defined</h1>
+    <p>Proverbs 31:25</p>
+    <a href="contact us.html" class="hero-btn">Contact Us</a>
+  </div>
+</section>
 
 <br>
 
+<div class="first-content">
 <h1>About Proverbs 31:25</h1>
 <p>The Proverbs 31:25 Foundation is a non-profit organization dedicated to supporting girls in Pietermaritzburg, South Africa, by providing them with essential sanitary products and empowering them to overcome challenges.
 </p>
-
+ <a href="about.html" class="hero-btn">About us</a>
+</div>
 <br>
 
 
