--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=  , initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
     <link rel="stylesheet" href="style.css">
     <title>Home</title>
 </head>
@@ -10,8 +12,7 @@
     
   <header id="site-header">
      <nav>
-      <div class="logo"> Proverbs 31:25
-        <a class="logo" href="index.html"></a>
+        <a href="index.html" class="logo">Proverbs 31:25</a>
       </div>
 
       <ul>
@@ -67,16 +68,155 @@
 </section>
 
 <br>
-
-<div class="first-content">
-<h1>About Proverbs 31:25</h1>
-<p>The Proverbs 31:25 Foundation is a non-profit organization dedicated to supporting girls in Pietermaritzburg, South Africa, by providing them with essential sanitary products and empowering them to overcome challenges.
-</p>
- <a href="about.html" class="hero-btn">About us</a>
+<div class="first-content fade-in">
+  <h1>About Proverbs 31:25</h1>
+  <p>
+    The Proverbs 31:25 Foundation is a non-profit organization dedicated to supporting girls in Pietermaritzburg, South Africa, by providing them with essential sanitary products and empowering them to overcome challenges.
+  </p>
+  <a href="Our work.html" class="hero-btn">About us</a>
 </div>
 <br>
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<footer class="footer fade-in">
+  <div class="footer-container">
+
+    <!-- Column 1: Menu -->
+    <div class="footer-column">
+      <h4>Menu</h4>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="service.html">Services</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </div>
+
+    <!-- Column 3: Contact -->
+    <div class="footer-column">
+      <h4>Contact Us</h4>
+      <p>Email: Proverbsfoundation3125@gmail.com</p>
+      <p>Phone: +27 </p>
+      <p>ALT Number: +27 </p>
+      <p>Location: Pietermaritzburg, South Africa</p>
+    </div>
+
+    <!-- Column 4: Newsletter + Social -->
+    <div class="footer-column">
+      <h4>Stay Connected</h4>
+
+     <div class="social-icons">
+  <a href="https://www.facebook.com/profile.php?id=61586166464856" aria-label="Facebook" target="_blank" class="facebook">
+    <i class="fa-brands fa-facebook-f"></i>
+  </a>
+
+  <a href="https://www.instagram.com/31pro_verbs?igsh=MXN3MmM2bmpjYTJjeg%3D%3D&utm_source=qr" aria-label="Instagram" target="_blank" class="instagram">
+    <i class="fa-brands fa-instagram"></i>
+  </a>
+
+  <a href="https://www.tiktok.com/@sisterhood.define?_r=1&_t=ZM-932qZhVCcB6" aria-label="TikTok" target="_blank" class="tiktok">
+    <i class="fa-brands fa-tiktok"></i>
+  </a>
+</div>
+
+
+  <div class="footer-bottom">
+    <p>&copy; Built by Barakhulon Industries.</p>
+  </div>
+</footer>
+
+
+  
 </body>
 </html>
