--- a/Blog.html
+++ b/Blog.html
@@ -3,34 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
 
-    <header id="site-header">
+   <header id="site-header">
      <nav>
-      <div class="logo"> Proverbs 31:25
-        <a class="logo" href="index.html"></a>
+        <a href="index.html" class="logo">Proverbs 31:25</a>
       </div>
 
       <ul>
         <li><a class="about.html">About Us</a>
         <div class="sub-menu-1">
           <ul>
-            <li><a class="Our work.html">Our Work</a></li>
-            <li><a class="contact us.html">Contact Us</a></li>
-            <li><a class="Certificates.html">Certificates</a></li>
+            <li><a href="Our work.html">Our Work</a></li>
+            <li><a href="contact us.html">Contact Us</a></li>
+            <li><a href="Certificates.html">Certificates</a></li>
           </ul>
         </div>
         </li>
-        <li><a class="Donate.html">Donate</a></li>
-        <li><a class="Blog.html">Blog</a></li>
-        <li><a class="Programmes.html">Programmes</a></li>
+        <li><a href="Donate.html">Donate</a></li>
+        <li><a href="Blog.html">Blog</a></li>
+        <li><a href="Programmes.html">Programmes</a></li>
       </ul>
       </nav>
   </header>
-     <script>
+
+  <script>
   const header = document.getElementById("site-header");
   const menuToggle = document.getElementById("menu-toggle");
   const mainNav = document.getElementById("main-nav");
@@ -51,6 +53,146 @@
     mainNav.classList.toggle("open");
   });
 </script>
+
+<section class="page-header">
+  <div class="page-header-content">
+    <h1>Donate</h1>
+    <p><a href="index.html">Home</a> / Donate</p>
+  </div>
+</section>
+
+<section class="blog-hero">
+  <h1>GBV Awareness & Resources</h1>
+  <p>Educating, empowering, and supporting communities across South Africa.</p>
+</section>
+
+<!-- YOUR BLOG POSTS -->
+<section class="blog-section">
+  <h2>Our GBV Articles</h2>
+
+  <div class="blog-grid">
+    <article class="blog-card">
+      <h3>Understanding Gender-Based Violence</h3>
+      <p>An overview of GBV in South Africa, its impact, and how communities can help.</p>
+      <a href="gbv-awareness.html">Read more</a>
+    </article>
+
+    <article class="blog-card">
+      <h3>How to Support Survivors</h3>
+      <p>Practical ways to support survivors with dignity, safety, and care.</p>
+      <a href="support-survivors.html">Read more</a>
+    </article>
+  </div>
+</section>
+
+<!-- EXTERNAL GBV RESOURCES -->
+<section class="blog-section alt">
+  <h2>Trusted GBV Resources (South Africa)</h2>
+
+  <div class="blog-grid">
+    <article class="blog-card external">
+      <h3>Sonke Gender Justice</h3>
+      <p>Leading civil society organisation working to prevent GBV in SA.</p>
+      <a href="https://sonke.org.za" target="_blank">Visit Website</a>
+    </article>
+
+    <article class="blog-card external">
+      <h3>People Opposing Women Abuse (POWA)</h3>
+      <p>Support, counselling, and advocacy for survivors of abuse.</p>
+      <a href="https://powa.co.za" target="_blank">Visit Website</a>
+    </article>
+
+    <article class="blog-card external">
+      <h3>SA GBV Command Centre</h3>
+      <p>Government-led GBV support services and emergency help.</p>
+      <a href="https://www.gov.za/gbv" target="_blank">Visit Website</a>
+    </article>
+  </div>
+</section>
+
+<!-- HELPLINE -->
+<section class="gbv-help">
+  <p>
+    <strong>Need Help?</strong><br>
+    GBV Command Centre: <strong>0800 428 428</strong> | SMS *120*7867#
+  </p>
+</section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<footer class="footer fade-in">
+  <div class="footer-container">
+
+    <!-- Column 1: Menu -->
+    <div class="footer-column">
+      <h4>Menu</h4>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="service.html">Services</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </div>
+
+    <!-- Column 3: Contact -->
+    <div class="footer-column">
+      <h4>Contact Us</h4>
+      <p>Email: info@jetcleanpro.co.za</p>
+      <p>Office: +27 33 012 501</p>
+      <p>Phone: +27 87 153 2004</p>
+      <p>Location: Pietermaritzburg, South Africa</p>
+    </div>
+
+    <!-- Column 4: Newsletter + Social -->
+    <div class="footer-column">
+      <h4>Stay Connected</h4>
+
+     <div class="social-icons">
+  <a href="https://www.facebook.com/yourpage" aria-label="Facebook" target="_blank" class="facebook">
+    <i class="fa-brands fa-facebook-f"></i>
+  </a>
+
+  <a href="https://www.instagram.com/yourpage" aria-label="Instagram" target="_blank" class="instagram">
+    <i class="fa-brands fa-instagram"></i>
+  </a>
+
+  <a href="https://www.tiktok.com/@yourpage" aria-label="TikTok" target="_blank" class="tiktok">
+    <i class="fa-brands fa-tiktok"></i>
+  </a>
+</div>
+
+
+  <div class="footer-bottom">
+    <p>&copy; Built by Barakhulon Industries.</p>
+  </div>
+</footer>
+
 
 </body>
 </html>
