--- a/Programmes.html
+++ b/Programmes.html
@@ -103,17 +103,17 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="service.html">Services</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="Donate.html">Donate</a></li>
+        <li><a href="contact us.html">Contact</a></li>
       </ul>
     </div>
 
-    <!-- Column 3: Contact -->
+     <!-- Column 3: Contact -->
     <div class="footer-column">
       <h4>Contact Us</h4>
-      <p>Email: info@jetcleanpro.co.za</p>
-      <p>Office: +27 33 012 501</p>
-      <p>Phone: +27 87 153 2004</p>
+      <p>Email: Proverbsfoundation3125@gmail.com</p>
+      <p>Phone: +27 63 526 5253 </p>
+      <p>ALT Number: +27 69 637 4437 </p>
       <p>Location: Pietermaritzburg, South Africa</p>
     </div>
 
