--- a/contact us.html
+++ b/contact us.html
@@ -61,6 +61,48 @@
   </div>
 </section>
 
+<section class="contact-page">
+
+  <div class="contact-header">
+    <h1>Contact Us</h1>
+    <p>We would love to hear from you</p>
+  </div>
+
+  <div class="contact-container">
+
+    <!-- CONTACT FORM -->
+    <form
+      action="mailto:info@yourfoundation.org"
+      method="post"
+      enctype="text/plain"
+      class="contact-form"
+    >
+
+      <label>Full Name</label>
+      <input type="text" name="Name" required>
+
+      <label>Email Address</label>
+      <input type="email" name="Email" required>
+
+      <label>Subject</label>
+      <input type="text" name="Subject">
+
+      <label>Message</label>
+      <textarea name="Message" rows="5" required></textarea>
+
+      <button type="submit">Send Message</button>
+
+    </form>
+
+    <!-- CONTACT INFO -->
+    <div class="contact-info">
+      <h3>Our Contact Details</h3>
+      <p><strong>Email:</strong> Proverbsfoundation3125@gmail.com</p>
+      <p><strong>Phone:</strong> +27 63 526 5253</p>
+      <p><strong> alt Number:</strong> +27 69 637 4437</p>
+      <p><strong>Location:</strong> Pietermaritzburg, South Africa</p>
+    </div>
+
 
 
 
@@ -105,17 +147,17 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="service.html">Services</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="Donate.html">Donate</a></li>
+        <li><a href="contact us.html">Contact</a></li>
       </ul>
     </div>
 
-    <!-- Column 3: Contact -->
+     <!-- Column 3: Contact -->
     <div class="footer-column">
       <h4>Contact Us</h4>
-      <p>Email: info@jetcleanpro.co.za</p>
-      <p>Office: +27 33 012 501</p>
-      <p>Phone: +27 87 153 2004</p>
+      <p>Email: Proverbsfoundation3125@gmail.com</p>
+      <p>Phone: +27 63 526 5253 </p>
+      <p>ALT Number: +27 69 637 4437 </p>
       <p>Location: Pietermaritzburg, South Africa</p>
     </div>
 
