--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="service.html">Services</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="Donate.html">Donate</a></li>
+        <li><a href="contact us.html">Contact</a></li>
       </ul>
     </div>
 
@@ -187,8 +187,8 @@
     <div class="footer-column">
       <h4>Contact Us</h4>
       <p>Email: Proverbsfoundation3125@gmail.com</p>
-      <p>Phone: +27 </p>
-      <p>ALT Number: +27 </p>
+      <p>Phone: +27 63 526 5253 </p>
+      <p>ALT Number: +27 69 637 4437 </p>
       <p>Location: Pietermaritzburg, South Africa</p>
     </div>
 
